--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "yui019/hori",
   "version": "1.0.0",
   "description": "Database schema library for Laravel inspired by Prisma.",
+  "homepage": "https://github.com/yui019/hori",
   "type": "library",
   "autoload": {
     "psr-4": {
@@ -16,7 +17,9 @@
       "name": "yui019"
     }
   ],
-  "require": {},
+  "require": {
+    "php": "^8.0"
+  },
   "extra": {
     "laravel": {
       "providers": [
